adding expire header in http signature and swagger ui
