# src/controllers/did-document.controller.ts
@@ -56,7 +56,7 @@ export class DidDocumentController extends Controller {
    * @returns void
    */
   @Response<ValidateErrorJSON>(422, "Validation Failed")
-  @Security({ SignedRequestHeader: [], DigestHeader: [] })
+  @Security({ SignedRequestHeader: [], DigestHeader: [], ExpiresHeader: [] })
   @Delete("/{did}")
   public async revoke(@Path() did: string): Promise<void> {
     this.setStatus(204);
