# src/controllers/did-verification-relationship.controller.ts
@@ -38,7 +38,7 @@ export class DidVerificationRelationshipController extends Controller {
    */
   @Response<ValidateErrorJSON>(422, "Validation Failed")
   @SuccessResponse(201, "Created")
-  @Security({ SignedRequestHeader: [], DigestHeader: [] })
+  @Security({ SignedRequestHeader: [], DigestHeader: [], ExpiresHeader: [] })
   @Post("/{did}/verification-relationships")
   public async register(
     @Path() did: string,
@@ -59,7 +59,7 @@ export class DidVerificationRelationshipController extends Controller {
    * @returns DidDocument
    */
   @Response<ValidateErrorJSON>(422, "Validation Failed")
-  @Security({ SignedRequestHeader: [], DigestHeader: [] })
+  @Security({ SignedRequestHeader: [], DigestHeader: [], ExpiresHeader: [] })
   @Put("/{did}/verification-relationships/{relationshipType}/{id}")
   public async update(
     @Path() did: string,
@@ -86,7 +86,7 @@ export class DidVerificationRelationshipController extends Controller {
    * @returns DidDocument
    */
   @Response<ValidateErrorJSON>(422, "Validation Failed")
-  @Security({ SignedRequestHeader: [], DigestHeader: [] })
+  @Security({ SignedRequestHeader: [], DigestHeader: [], ExpiresHeader: [] })
   @Delete("/{did}/verification-relationships/{relationshipType}/{id}")
   public async revoke(
     @Path() did: string,
